erDiagram
    %% A-Player Evaluations Database - Current State ERD
    %% Generated: February 1, 2025 - Pre Multi-Tenancy Implementation
    
    people {
        string id PK "UUID"
        string name "Employee name"
        string email "Email address"
        string role "Employee role"
        boolean active "Active status"
        string person_description "Description"
        string manager_notes "Manager notes"
        string department "Department"
        string hire_date "Hire date"
        string created_at "Created timestamp"
    }
    
    evaluation_cycles {
        string id PK "UUID"
        string name "Quarter name (Q1 2025)"
        string start_date "Quarter start"
        string end_date "Quarter end"
        string created_at "Created timestamp"
    }
    
    weighted_evaluation_scores {
        string evaluatee_id FK "Person being evaluated"
        string quarter_id FK "Evaluation quarter"
        string attribute_name "Performance attribute"
        number manager_score "Manager rating"
        number peer_score "Peer rating"
        number self_score "Self rating"
        number weighted_final_score "Calculated final score"
        string weighted_final_grade "Letter grade"
        boolean has_manager_eval "Manager eval exists"
        boolean has_peer_eval "Peer eval exists"
        boolean has_self_eval "Self eval exists"
        number completion_percentage "Completion %"
    }
    
    evaluation_assignments {
        string id PK "UUID"
        string evaluator_id FK "Person doing evaluation"
        string evaluatee_id FK "Person being evaluated"
        string quarter_id FK "Evaluation quarter"
        string evaluation_type "peer/manager/self"
        string status "pending/in_progress/completed"
        string assigned_by FK "Who assigned"
        string survey_token "Unique survey access token"
        string assigned_at "Assignment timestamp"
        string completed_at "Completion timestamp"
        string created_at "Created timestamp"
    }
    
    attribute_weights {
        string id PK "UUID"
        string attribute_name "Attribute name"
        number weight "Weight multiplier"
        string description "Weight description"
        string environment "Environment (prod/dev)"
        object created_by "Created by user"
        string created_at "Created timestamp"
        string updated_at "Updated timestamp"
    }
    
    employee_quarter_notes {
        string id PK "UUID"
        string employee_id FK "Employee ID"
        string quarter_id FK "Quarter ID"
        string notes "Quarterly notes"
        string created_by FK "Who created notes"
        string created_at "Created timestamp"
        string updated_at "Updated timestamp"
    }
    
    analysis_jobs {
        string id PK "UUID"
        string evaluatee_id FK "Employee being analyzed"
        string quarter_id FK "Quarter for analysis"
        string status "pending/processing/completed/error"
        string stage "Current processing stage"
        string pdf_url "Generated PDF URL"
        string pdf_data "PDF binary data"
        string pdf_filename "PDF filename"
        string error_message "Error details"
        string created_at "Created timestamp"
        string updated_at "Updated timestamp"
        string completed_at "Completion timestamp"
    }
    
    core_group_calculations {
        string id PK "UUID"
        string employee_id FK "Employee ID"
        string quarter_id FK "Quarter ID"
        string core_group "Core group name"
        number score "Core group score"
        string created_at "Created timestamp"
    }
    
    core_group_breakdown {
        string id PK "UUID"
        string employee_id FK "Employee ID"
        string quarter_id FK "Quarter ID"
        string core_group "Core group name"
        object breakdown_data "Detailed breakdown"
        string created_at "Created timestamp"
    }
    
    quarterly_trends {
        string id PK "UUID"
        string employee_id FK "Employee ID"
        string attribute_name "Attribute name"
        object trend_data "Historical trend data"
        string created_at "Created timestamp"
    }
    
    attribute_responses {
        string id PK "UUID"
        string assignment_id FK "Assignment ID"
        string attribute_name "Attribute name"
        number score "Attribute score"
        string created_at "Created timestamp"
    }
    
    persona_classifications {
        string id PK "UUID"
        string employee_id FK "Employee ID"
        string quarter_id FK "Quarter ID"
        string persona_type "Persona classification"
        object classification_data "Classification details"
        string created_at "Created timestamp"
    }
    
    app_config {
        number id PK "Serial ID"
        string key "Configuration key"
        string value "Configuration value"
        string environment "Environment"
        string created_at "Created timestamp"
    }
    
    %% Relationships
    people ||--o{ weighted_evaluation_scores : "evaluates"
    evaluation_cycles ||--o{ weighted_evaluation_scores : "period"
    people ||--o{ evaluation_assignments : "evaluator"
    people ||--o{ evaluation_assignments : "evaluatee"
    people ||--o{ evaluation_assignments : "assigned_by"
    evaluation_cycles ||--o{ evaluation_assignments : "quarter"
    people ||--o{ employee_quarter_notes : "employee"
    evaluation_cycles ||--o{ employee_quarter_notes : "quarter"
    people ||--o{ employee_quarter_notes : "created_by"
    people ||--o{ analysis_jobs : "analyzed"
    evaluation_cycles ||--o{ analysis_jobs : "quarter"
    people ||--o{ core_group_calculations : "employee"
    evaluation_cycles ||--o{ core_group_calculations : "quarter"
    people ||--o{ core_group_breakdown : "employee"
    evaluation_cycles ||--o{ core_group_breakdown : "quarter"
    people ||--o{ quarterly_trends : "employee"
    evaluation_assignments ||--o{ attribute_responses : "assignment"
    people ||--o{ persona_classifications : "employee"
    evaluation_cycles ||--o{ persona_classifications : "quarter"
